--- a/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/index.html
+++ b/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/index.html
@@ -30,8 +30,50 @@
             <img src="./assets/images/banner.jpg" alt="DaySeeker Dark Sun"/>
         </section>
         <section class="featured-items">
-            <!-- <h2>Featured Items</h2> a partir de 42.17 del video -->
-        </section>
-    </main>
+            <h2>Featured Items</h2>
+        <ul>
+            <li>
+                <img src="./assets/images/DyeTee.webp" alt="Dey Tee">
+                <h3>t-shirt Dye Tee</h3>
+                <p>€35.80</p>
+            </li>
+            <li>
+                <img src="./assets/images/ReturnTee.webp" alt="Return Tee">
+                <h3>t-shirt Return Tee</h3>
+                <p>38.10</p>
+            </li>
+            <li>
+                <img src="./assets/images/TankTee.webp" alt="Tank Tee">
+                <h3>t-shirt Tank Tee</h3>
+                <p>€39.00</p>
+            </li>
+            <li>
+                <img src="./assets/images/TourHoodie.webp" alt="Tour Hoodie">
+                <h3>t-shirt Tour Hoodie</h3>
+                <p>€39.90</p>
+            </li>
+            <li>
+                <img src="./assets/images/TourReturnTee.webp" alt="Tour Return Tee">
+                <h3>t-shirt Tour Return Tee</h3>
+                <p>€39.20</p>
+            </li>
+            <li>
+                <img src="./assets/images/TourTee.webp" alt="Tour Tee">
+                <h3>t-shirt Tour Tee</h3>
+                <p>€36.50</p>
+            </li>
+            <li>
+                <img src="./assets/images/Vynil.webp" alt="Vynil Dark Sun - Black Variant">
+                <h3>Vynil Dark Sun - Black Variant</h3>
+                <p>€30.00</p>
+            </li>
+        </ul>
+    </section>
+    <section class="videoclip">
+        <video muted autoplay>
+            <source src="./assets/videos/crying.mp4" type="video/mp4" />
+        </video>
+    </section>
+</main>
 </body>
 </html>
