--- a/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/index.html
+++ b/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/index.html
@@ -70,7 +70,11 @@
         </ul>
     </section>
     <section class="videoclip">
-        <video muted autoplay>
+        <div>
+            <h2>Crying while your dance</h2>
+            <button>Watch</button>
+        </div>
+        <video muted autoplay loop>
             <source src="./assets/videos/crying.mp4" type="video/mp4" />
         </video>
     </section>
