--- a/REACT/1.- Primer_Proyecto/PrimerProyecto/index.html
+++ b/REACT/1.- Primer_Proyecto/PrimerProyecto/index.html
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- <div id="root"></div> este es el punto de entrada de la aplicación -->
